--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     </dependency>
     <dependency>
       <groupId>pl.sda</groupId>
-      <artifactId>converter</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>converter2</artifactId>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 
